fix: remove 'betting' references and clarify analytics/research focus
- Changed 'Sports Betting Analytics' to 'Sports Analytics & Research'
- Updated landing page to emphasize research and analytics
- Clarified app is NOT a betting service
- Added explicit disclaimer: 'Not a betting service - analytics and research only'
- Updated all meta descriptions and titles

This clarifies the app's purpose as an analytics and research tool,
not a betting or gambling service, which is critical for:
- App Store compliance and categorization
- User expectations
- Legal protection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parlay Wizard - Sports Betting Analytics</title>
+    <title>Parlay Wizard - Sports Analytics & Research</title>
     <style>
         * {
             margin: 0;
@@ -135,12 +135,12 @@
 <body>
     <div class="container">
         <h1>🎯 Parlay Wizard</h1>
-        <p class="tagline">Data-Driven Sports Betting Analytics</p>
+        <p class="tagline">Data-Driven Sports Analytics & Research</p>
 
         <p class="description">
-            Build smarter parlays with advanced statistical analysis, confidence scores,
-            and probability calculations. Track your performance and optimize your
-            betting strategy with data-driven insights.
+            Research smarter parlays with advanced statistical analysis, confidence scores,
+            and probability calculations. Track your research performance and optimize your
+            strategy with data-driven insights. Not a betting service - analytics and research only.
         </p>
 
         <div class="links">
