--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy for Parlay Wizard - Sports Betting Analytics App">
+    <meta name="description" content="Privacy Policy for Parlay Wizard - Sports Analytics & Research App">
     <title>Privacy Policy - Parlay Wizard</title>
     <style>
         * {
