--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Terms of Service for Parlay Wizard - Sports Betting Analytics App">
+    <meta name="description" content="Terms of Service for Parlay Wizard - Sports Analytics & Research App">
     <title>Terms of Service - Parlay Wizard</title>
     <style>
         * {
@@ -127,12 +127,12 @@
         <p>By accessing or using Parlay Wizard, you agree to be bound by these Terms of Service and all applicable laws and regulations. If you do not agree with any of these terms, you are prohibited from using the app.</p>
 
         <h2>2. Description of Service</h2>
-        <p><strong>Parlay Wizard</strong> is a sports betting analytics and research tool that provides:</p>
+        <p><strong>Parlay Wizard</strong> is a sports analytics and research tool that provides:</p>
         <ul>
-            <li>Parlay probability calculations</li>
-            <li>Confidence scoring based on statistical analysis</li>
-            <li>Performance tracking and analytics</li>
-            <li>Correlation detection between bets</li>
+            <li>Parlay probability calculations and mathematical analysis</li>
+            <li>Confidence scoring based on statistical models</li>
+            <li>Performance tracking and research analytics</li>
+            <li>Correlation detection between parlay legs</li>
             <li>Data export and portfolio management</li>
         </ul>
 
@@ -151,7 +151,7 @@
         <p>Parlay Wizard is intended for:</p>
         <ul>
             <li>Educational purposes to understand parlay mathematics</li>
-            <li>Research and analysis of sports betting concepts</li>
+            <li>Research and analysis of sports parlay concepts</li>
             <li>Entertainment and informational use</li>
         </ul>
 
